Se explica brevemente la forma de la regresión lineal regularizada

--- a/Tarea1/tarea1_martin_cornejo.ipynb
+++ b/Tarea1/tarea1_martin_cornejo.ipynb
@@ -75,6 +75,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A continuación se grafica la data:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -105,6 +112,40 @@
     "plt.xlabel(\"Unidades construidas\")\n",
     "plt.ylabel(\"Mediana del valor [miles de dólares]\")\n",
     "plt.plot(x,y, 'g.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regresión lineal regularizada"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sabemos que para la regresión lineal regularizada, el parámetro $\\theta$ tiene la forma:\n",
+    "\\begin{equation}\n",
+    "\\theta = (\\tilde{X}^{T}\\tilde{X} + \\rho I)^{-1} \\tilde{X}^{T}Y\n",
+    "\\end{equation}\n",
+    "\n",
+    "Dado que este es el caso en que $x \\rightarrow f(x) \\ \\epsilon \\ \\rm I\\!R \\rightarrow \\rm I\\!R$, tenemos que $\\tilde{X}$ tiene la forma\n",
+    "\\begin{equation}\n",
+    "\\tilde{X} = \\begin{bmatrix}\n",
+    "           x_{1} & 1\\\\\n",
+    "           x_{2} & 1\\\\\n",
+    "           \\vdots & \\vdots \\\\\n",
+    "           x_{N} & 1\n",
+    "         \\end{bmatrix}\n",
+    ", Y = \\begin{bmatrix}\n",
+    "           y_{1} \\\\\n",
+    "           y_{2} \\\\\n",
+    "           \\vdots \\\\\n",
+    "           y_{N} \n",
+    "         \\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "Por lo que la identidad pertenecerá a $\\rm I\\!R^{2x2}$ y $\\theta$ a $\\rm I\\!R^{2}$, lo cual tiene sentido ya que $theta$ t valores corresponderán a la pendiente $m$ y el coeficiente de posición $b$ de una recta. "
    ]
   },
   {
