--- a/Tarea1/tarea1_martin_cornejo.ipynb
+++ b/Tarea1/tarea1_martin_cornejo.ipynb
@@ -37,6 +37,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# P1 Máxima Verosimilitud"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si sabemos que el parámetro se encuentra entre 9 y 10 entonces se descartan inmediatamente las estimaciones A, B, C y G. Lo cual nos deja las estimaciones D, E y F como posibles candidatas al parámetro óptimo. Por otro lado, las estimaciones de los científicos siguen una distribución normal de igual media pero distintas varianzas. En otras palabras, las observaciones que tenemos vienen de modelos distintos! \n",
+    "\n",
+    "No abordaría este problema con máxima verosimilitud ya que el conjunto de datos no satisface __iid__ (independiente e identicamente distribuidas), ya que siguen distribuciones distintas. Distinto sería si dichas estimaciones vinieran del mismo científico.\n",
+    "\n",
+    "Finalmente, para encontrar el parámetro óptimo elegiría entre las estimaciones D, E y F la que corresponda a la distribución normal con menor varianza (el científico más confiable). De ser posible, una mejor solución sería pedirle al científico más confiable realizar varias estimaciones, y luego aplicaría máxima verosimilitud sobre esas estimaciones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# P2 Regresión Lineal"
    ]
   },
