Se reformula la P1

--- a/Tarea1/tarea1_martin_cornejo.ipynb
+++ b/Tarea1/tarea1_martin_cornejo.ipynb
@@ -44,11 +44,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si sabemos que el parámetro se encuentra entre 9 y 10 entonces se descartan inmediatamente las estimaciones A, B, C y G. Lo cual nos deja las estimaciones D, E y F como posibles candidatas al parámetro óptimo. Por otro lado, las estimaciones de los científicos siguen una distribución normal de igual media pero distintas varianzas. En otras palabras, las observaciones que tenemos vienen de modelos distintos! \n",
+    "¿Cual es el modelo a encontrar? Se propone que el modelo es una __constante__. Luego el modelo probabilístico tiene la forma $y = \\mu + \\epsilon$, donde $\\mu $ es la constante que caracteriza al modelo y $\\epsilon$ es ruido gaussiano. Esto es equivalente a decir que $y$ sigue una distribución normal $N(\\mu, \\sigma_{\\epsilon}^2)$. Dado que las observaciones son condicionalmente indepentientes (todas siguen distribuciones normales con misma media y ruidos gaussianos), entonces se puede usar máxima verosimilitud para encontrar el parámetro $\\mu$, y la función de verosimilitud viene dada por:\n",
     "\n",
-    "No abordaría este problema con máxima verosimilitud ya que el conjunto de datos no satisface __iid__ (independiente e identicamente distribuidas), ya que siguen distribuciones distintas. Distinto sería si dichas estimaciones vinieran del mismo científico.\n",
+    "\\begin{equation}\n",
+    "p(Y|\\tilde{X}, \\mu) = \\prod_{i=1}^{N}N(y_i;\\mu,\\sigma_{i}^2)\n",
+    "\\end{equation}\n",
     "\n",
-    "Finalmente, para encontrar el parámetro óptimo elegiría entre las estimaciones D, E y F la que corresponda a la distribución normal con menor varianza (el científico más confiable). De ser posible, una mejor solución sería pedirle al científico más confiable realizar varias estimaciones, y luego aplicaría máxima verosimilitud sobre esas estimaciones."
+    "Donde N es el numero de estimaciones, $y_i$ es la estimacion i-ésima y $\\sigma_{i}$ es la varianza de dicha estimación (depende de cada científico). Sin embargo, conceptualmente no queremos usar este _approach_ ya que queremos penalizar las observaciones que no se encuentran entre 9 y 10. Entonces se concluye que una __regresión bayesiana__ es más adecuada para resolver este problema. De esta forma, podremos favorecer las estimaciones que siguen distribuciones con varianza pequeña (científicos con mayor certeza)."
    ]
   },
   {
