--- a/Tarea2/tarea2_martin_cornejo.ipynb
+++ b/Tarea2/tarea2_martin_cornejo.ipynb
@@ -189,6 +189,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### iii)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.042743656235906"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def f_theta(x, pol_coef, theta):\n",
+    "    f_pol = np.poly1d(pol_coef)\n",
+    "    \n",
+    "    return f_pol(x) + theta[0]*math.sin(theta[1]*x + theta[2])*math.exp(theta[3]*x)\n",
+    "\n",
+    "theta_1 = [1, 1, 1, 1]\n",
+    "pol_coef = [1, 1, 1, 1]\n",
+    "\n",
+    "f_theta(2, pol_coef, theta_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Regresión lineal regularizada"
    ]
   },
