se importa scipy y se usa minimize

--- a/Tarea2/tarea2_martin_cornejo.ipynb
+++ b/Tarea2/tarea2_martin_cornejo.ipynb
@@ -23,11 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import scipy.optimize as opt\n",
     "import math\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
@@ -194,30 +195,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16.042743656235906"
+       "      fun: 23675978473850.418\n",
+       " hess_inv: array([[1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1]])\n",
+       "      jac: array([0., 0., 0., 0.])\n",
+       "  message: 'Optimization terminated successfully.'\n",
+       "     nfev: 12\n",
+       "      nit: 1\n",
+       "     njev: 2\n",
+       "   status: 0\n",
+       "  success: True\n",
+       "        x: array([-0.65597317, -0.44670771,  0.00293022, -0.59658703])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def f_theta(x, pol_coef, theta):\n",
+    "def f_theta(x, theta):\n",
+    "    pol_coef = [1, 0, 0, 0]\n",
     "    f_pol = np.poly1d(pol_coef)\n",
     "    \n",
     "    return f_pol(x) + theta[0]*math.sin(theta[1]*x + theta[2])*math.exp(theta[3]*x)\n",
     "\n",
-    "theta_1 = [1, 1, 1, 1]\n",
-    "pol_coef = [1, 1, 1, 1]\n",
+    "def cost_func(theta, x, y):\n",
+    "    f_theta2 = lambda t: f_theta(t, theta)\n",
+    "    \n",
+    "    return np.sum(np.power(np.subtract(y, np.vectorize(f_theta2)(x)), 2))\n",
     "\n",
-    "f_theta(2, pol_coef, theta_1)"
+    "    \n",
+    "theta_1 = np.array([0.01, 0.01, 0.01, 0.01])\n",
+    "#f_theta(2, theta_1)\n",
+    "#cost_func(x_tr, y_tr, theta_1)\n",
+    "\n",
+    "opt.minimize(cost_func, theta_1, args=(x_tr, y_tr), method='BFGS')"
    ]
   },
   {
