--- a/Tarea2/tarea2_martin_cornejo.ipynb
+++ b/Tarea2/tarea2_martin_cornejo.ipynb
@@ -277,16 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f80b44555c0>"
+       "<matplotlib.collections.PathCollection at 0x7f80b41ba908>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     },
