Se comienza a implementar la funcion deepnn

--- a/Tarea4/Tarea_4_MA5203.ipynb
+++ b/Tarea4/Tarea_4_MA5203.ipynb
@@ -51,9 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/martin/.local/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import absolute_import\n",
     "from __future__ import division\n",
@@ -93,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,36 +124,40 @@
     "    \n",
     "    # Reshape para usar input en una red convolucional (hint: se debe hacer un 'flatten' a 1D)\n",
     "    with tf.name_scope('reshape'):\n",
-    "        x_image = tf.reshape(x, [..., ..., ..., ...])\n",
+    "        x_image = tf.reshape(x, [-1, 28, 28, 1])\n",
     "        \n",
     "  ####---------------- fin completar -----------------#####\n",
     "\n",
     "  ####----------------- (2) COMPLETAR ---------------------#####\n",
     "    \n",
     "    with tf.name_scope('conv1'):\n",
-    "        W_conv1 = weight_variable([..., ..., ..., ...])\n",
-    "        b_conv1 = bias_variable([...])\n",
+    "        shape = [3, 3, 1, 32]\n",
+    "        W_conv1 = weight_variable(shape)\n",
+    "        b_conv1 = bias_variable([32])\n",
     "        # Ver el bloque de más abajo para las funciones conv2d, max_pool_2x2,\n",
     "        # weight_variable, y bias_variable\n",
     "        h_conv1 = tf.nn.relu(conv2d(x_image, W_conv1) + b_conv1)\n",
     "\n",
     "    with tf.name_scope('pool1'):\n",
-    "        h_pool1 = max_pool_2x2(...)\n",
+    "        h_pool1 = max_pool_2x2(h_conv1)\n",
     "\n",
     "    with tf.name_scope('conv2'):\n",
-    "        W_conv2 = weight_variable([..., ..., ..., ...])\n",
-    "        b_conv2 = bias_variable([...])\n",
+    "        shape = [3, 3, 32, 64]\n",
+    "        W_conv2 = weight_variable(shape)\n",
+    "        b_conv2 = bias_variable([64])\n",
     "        h_conv2 = tf.nn.relu(conv2d(h_pool1, W_conv2) + b_conv2)\n",
     "\n",
     "    with tf.name_scope('pool2'):\n",
-    "        h_pool2 = max_pool_2x2(...)\n",
+    "        h_pool2 = max_pool_2x2(h_conv2)\n",
     "\n",
     "    with tf.name_scope('fc1'):\n",
-    "        W_fc1 = weight_variable([..., ...])\n",
-    "        b_fc1 = bias_variable([...])\n",
+    "        layer_shape_in =  h_pool2.get_shape()\n",
+    "        num_features_in = layer_shape_in[1:4].num_elements()\n",
+    "        W_fc1 = weight_variable([num_features_in, 250])\n",
+    "        b_fc1 = bias_variable([250])\n",
     "\n",
     "        # El argumento -1 hace 'flatten' a 1D\n",
-    "        h_pool2_flat = tf.reshape(h_pool2, [-1, ...])\n",
+    "        h_pool2_flat = tf.reshape(h_pool2, [-1, 7*7*64])\n",
     "        h_fc1 = tf.nn.relu(tf.matmul(h_pool2_flat, W_fc1) + b_fc1)\n",
     "        \n",
     "  ####---------------- fin completar -----------------#####\n",
@@ -162,8 +175,8 @@
     "    \n",
     "  # Map un número de features al número de clases\n",
     "    with tf.name_scope('cl_layer'):\n",
-    "        W_fc2 = weight_variable([..., ...])\n",
-    "        b_fc2 = bias_variable([...])\n",
+    "        W_fc2 = weight_variable([250, 10])\n",
+    "        b_fc2 = bias_variable([10])\n",
     "\n",
     "        y_conv = tf.matmul(h_fc1_drop, W_fc2) + b_fc2\n",
     "    return y_conv, keep_prob\n",
@@ -180,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,13 +211,13 @@
     "\n",
     "def weight_variable(shape):\n",
     "    \"\"\"weight_variable genera una variable de peso dadas ciertas dimensiones\"\"\"\n",
-    "    initial = tf.truncated_normal(..., stddev=...)\n",
+    "    initial = tf.truncated_normal(shape, stddev=0.01)\n",
     "    return tf.Variable(initial)\n",
     "\n",
     "\n",
     "def bias_variable(shape):\n",
-    "    \"\"\"bias_variable genera una variable debias variable dado cierto shape\"\"\"\n",
-    "    initial = tf.constant(..., shape=...)\n",
+    "    \"\"\"bias_variable genera una variable de bias dado cierto shape\"\"\"\n",
+    "    initial = tf.constant(0.05, shape=shape)\n",
     "    return tf.Variable(initial)\n",
     "        \n",
     "  ####---------------- fin completar -----------------#####"
@@ -356,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
