Primer approach de la fase de construccion

--- a/Tarea4/Tarea_4_MA5203.ipynb
+++ b/Tarea4/Tarea_4_MA5203.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
     "    # Implementar regularización por dropout\n",
     "    with tf.name_scope('dropout'):\n",
     "        keep_prob = tf.placeholder(tf.float32)\n",
-    "        h_fc1_drop = ...\n",
+    "        h_fc1_drop = tf.nn.dropout(h_fc1, keep_prob)\n",
     "        \n",
     "  ####---------------- fin completar -----------------#####\n",
     "\n",
