Primer approach en fase de ejecucion

--- a/Tarea4/Tarea_4_MA5203.ipynb
+++ b/Tarea4/Tarea_4_MA5203.ipynb
@@ -75,6 +75,7 @@
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "\n",
     "import tensorflow as tf\n",
+    "import pdb\n",
     "\n",
     "FLAGS = None"
    ]
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,21 +254,35 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting /tmp/tensorflow/mnist/input_data/train-images-idx3-ubyte.gz\n",
+      "Extracting /tmp/tensorflow/mnist/input_data/train-labels-idx1-ubyte.gz\n",
+      "Extracting /tmp/tensorflow/mnist/input_data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting /tmp/tensorflow/mnist/input_data/t10k-labels-idx1-ubyte.gz\n",
+      "> <ipython-input-11-cb3b0ed67ba8>(10)main()\n",
+      "-> x = tf.placeholder(tf.float32, shape=(None, 28*28))\n"
+     ]
+    }
+   ],
    "source": [
     "# Función que realiza la fase de ejecución\n",
     "def main(mnist_data):\n",
     "    # Importar datos\n",
     "    mnist = input_data.read_data_sets(FLAGS.data_dir)\n",
-    "\n",
+    "    pdb.set_trace()\n",
+    "    \n",
     " ####----------------- (6) COMPLETAR ---------------------#####\n",
     "    \n",
     "    # Inputs, etiquetas, y output de la red convolucional\n",
-    "    x = tf.placeholder(tf.float32, [..., ...])\n",
+    "    x = tf.placeholder(tf.float32, shape=(None, 28*28))\n",
     "\n",
-    "    y_ = tf.placeholder(tf.int64, [...])\n",
+    "    y_ = tf.placeholder(tf.int64, shape=(None))\n",
     "\n",
-    "    y_conv, keep_prob = ...\n",
+    "    y_conv, keep_prob = deepnn(x)\n",
     "        \n",
     "  ####---------------- fin completar -----------------#####\n",
     "\n",
@@ -275,16 +290,17 @@
     "    \n",
     "    # Función objetivo, optimizador y evaluación\n",
     "    with tf.name_scope('loss'):\n",
-    "        cross_entropy = ...\n",
-    "    cross_entropy = tf.reduce_mean(cross_entropy)\n",
+    "        cross_entropy = tf.nn.sparse_softmax_cross_entropy_with_logits(labels=y_,\n",
+    "                                                              logits=y_conv)\n",
+    "        cross_entropy = tf.reduce_mean(cross_entropy)\n",
     "\n",
     "    with tf.name_scope('my_optimizer'):\n",
-    "        train_step = ...\n",
+    "        train_step = tf.train.GradientDescentOptimizer(learning_rate=0.01)\n",
     "\n",
     "    with tf.name_scope('accuracy'):\n",
     "        correct_prediction = tf.equal(tf.argmax(y_conv, 1), y_)\n",
     "        correct_prediction = tf.cast(correct_prediction, tf.float32)\n",
-    "    accuracy = ...\n",
+    "        accuracy = tf.reduce_mean(correct_prediction)\n",
     "        \n",
     "  ####---------------- fin completar -----------------#####\n",
     "\n",
@@ -298,23 +314,27 @@
     "    # Ejecutar la sesión que entrena la red convolucional\n",
     "    with tf.Session() as sess:\n",
     "        #Inicialice las variables\n",
-    "        ...\n",
-    "        for i in range(...):\n",
-    "            X_batch, y_batch = mnist.train.next_batch(...)\n",
+    "        init = tf.global_variables_initializer()\n",
+    "        init.run()\n",
+    "        for i in range(n_epochs = 2000):\n",
+    "            X_batch, y_batch = mnist.train.next_batch(batch_size=25)\n",
     "            # Imprimir métricas cada 100 epochs\n",
     "            if i % 100 == 0:\n",
-    "                train_accuracy = ...\n",
+    "                train_accuracy = accuracy.eval(feed_dict={x: X_batch, y_: y_batch})\n",
     "                print('step %d, training set accuracy %g' % (i, train_accuracy))\n",
-    "                validation_accuracy = ...\n",
+    "                validation_accuracy = accuracy.eval(feed_dict={x: mnist.validation.images,\n",
+    "                                            y_: mnist.validation.labels})\n",
     "                print('validation set accuracy %g' % validation_accuracy)\n",
-    "                test_accuracy = ...\n",
+    "                test_accuracy = accuracy.eval(feed_dict={x: mnist.test.images,\n",
+    "                                            y_: mnist.test.labels})\n",
     "                print('test set accuracy %g' % test_accuracy)\n",
     "            # El argumento keep_prob indica la probabilidad de mantener un nodo de input\n",
     "            # (es dropout aplicado al input)\n",
-    "            train_step.run(feed_dict={x: ..., y_: ..., keep_prob: ...})\n",
+    "            train_step.run(feed_dict={x: X_batch, y_: y_batch, keep_prob: 0.8})\n",
     "        \n",
     "  ####---------------- fin completar -----------------#####\n",
-    "            \n",
+    "\n",
+    "import pdb\n",
     "# Esta parte del código ejecuta la función main(). No necesitas modificarla\n",
     "if __name__ == '__main__':\n",
     "    parser = argparse.ArgumentParser()\n",
